assets/css/screen.css
@import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300");

/* Reset styles */
a,abbr,acronym,address,applet,article,aside,audio,b,big,blockquote,body,canvas,caption,center,cite,code,dd,del,details,dfn,div,dl,dt,em,embed,fieldset,figcaption,figure,footer,form,h1,h2,h3,h4,h5,h6,header,hgroup,html,i,iframe,img,ins,kbd,label,legend,li,mark,menu,nav,object,ol,output,p,pre,q,ruby,s,samp,section,small,span,strike,strong,sub,summary,sup,table,tbody,td,tfoot,th,thead,time,tr,tt,u,ul,var,video{margin:0;padding:0;border:0;font:inherit;vertical-align:baseline}article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block}body{line-height:1}ol,ul{list-style:none}blockquote,q{quotes:none}blockquote:after,blockquote:before,q:after,q:before{content:'';content:none}table{border-collapse:collapse;border-spacing:0}

/* Base styles */
html {
  font-size: 1em;
  line-height: 1.4400000000000002em; 
  padding-top: 1.4400000000000002em; 
  padding-left: 1.200em;
  padding-right: 1.200em; 

  background: url('../img/chicago-night.jpeg');
  background-repeat: no-repeat;
		background-size: 100% 100%, cover;
		background-attachment:fixed;

  font-family: "Source Sans Pro", Helvetica, sans-serif;
  font-weight:300 ;
  letter-spacing: 0.25em;
	text-transform: uppercase;
  line-height: 2;
}

h1 {
  font-size: 1.728em; 
  line-height: 1.4400000000000002em; 
  padding-top: 0.8333333333333334em;
}

h2 {
  font-size: 1.2em; 
  line-height: 1.4400000000000002em; 
  padding-top: 0.6333333333333334em;
}

h2.title{
  text-align: left;
  color:red;
  font-weight: 800;
  text-decoration: underline;
  letter-spacing: .1em;
}

h3{
  font-size:1em;
  padding-top: 1em;
}

h3.red{
  font-size:1em;
  padding-top: 0;
  padding-bottom: 1em; 
}

img {
  display: inline;
  max-width: 100%; 
}

main{
  display:block;
  justify-content:center;
  background-color:white;
  border-color:white;
  padding:1.5em;
  border-radius:.3em;
  opacity:.9;
  text-align:center;
  margin-bottom:1.25em;
}

footer{
  padding: 2em;
  padding-bottom:.5em;
}

li{
  display:inline;
}

a {
		transition: color 0.2s ease, border-color 0.2s ease;
		color: inherit;
		text-decoration: none;
	}

a:hover {
  color: red;
  cursor:pointer;
}

nav{
  justify-content:center;
}
nav a {
  font-size:1em;
}

p{
  font-family: 'Source Sans Pro', sans-serif;
  font-size:1em;
  font-weight:500;
  max-width:35em;
  text-align:left;
  text-transform:none;
  letter-spacing: normal;
  padding:1em;
  line-height:1.5em;
  border:none;
  padding:.5em;
}

p a{
    color: red;
}

p.center{
  text-align: center;
  font-size: 1em;
  margin-bottom: -2em;
}

p.desc{
  font-size:1em;
  line-height:1.25em;
  font-weight: 600;
}

p.intro{
  text-align:center;
    font-size:1em;
  padding:.25em, 0, 0, 0;
  line-height:1.5em;

}

p.date{
  font-size:1em;
  font-weight: 500;
  color: red;
  padding:0;
  text-align: right;
}

i{
  font-style: italic;
}

input[type="text"],input[type="email"],textarea{
  width:100%;
  margin-bottom:1.5em;
  border-radius:.1em;
  font-family:"Source Sans Pro";
  font-size:1.25em;
  padding: .25em;
  margin-left:-.25em;
  border: solid .0005em grey;
}

form{
  max-width:30em;
}

section#links {
    margin-bottom: -2em;
    margin-top: 1em;
}


/* Layout styles*/
#introduction{
  margin-top:-4em;
  padding-top:5em;
  border-top:solid .001em;
  border-color: gray;
  font-size:1.25em;
}

#download{
  font-size: 1.728em; 
  line-height: 1.6666666666666667em; 
  padding-top: 0.8333333333333334em; 
  padding-bottom: 0.8333333333333334em; 
  border-top:solid .001em;
  border-color: gray;
}

#bgcredit{
  font-size:.75em;
}

#mypic{
  padding-top: 1.728em;
  padding-bottom: 0.8333333333333334em;
  max-width:14em;
  min-height: 9em;
}

#line{
  margin-top: -6em;
  padding-top: 6em;
  border-top: solid .001em;
  border-color: gray;
}

#btnSend{
  border : solid .1em #e6e6e6;
  border-radius : .1875em;
  font-size : 1.25em;
  color : #696869;
  padding : .25em 1em;
  margin-top:1em;
  margin-left: auto; 
  margin-right: auto;
  background : #ffffff;
  background : -webkit-gradient(linear, left top, left bottom, color-stop(0%,#ffffff), color-stop(49%,#f1f1f1), color-stop(51%,#e1e1e1), color-stop(100%,#f6f6f6));
  background : -moz-linear-gradient(top, #ffffff 0%, #f1f1f1 49%, #e1e1e1 51%, #f6f6f6 100%);
  background : -webkit-linear-gradient(top, #ffffff 0%, #f1f1f1 49%, #e1e1e1 51%, #f6f6f6 100%);
  background : -o-linear-gradient(top, #ffffff 0%, #f1f1f1 49%, #e1e1e1 51%, #f6f6f6 100%);
  background : -ms-linear-gradient(top, #ffffff 0%, #f1f1f1 49%, #e1e1e1 51%, #f6f6f6 100%);
  background : linear-gradient(top, #ffffff 0%, #f1f1f1 49%, #e1e1e1 51%, #f6f6f6 100%);
}

#btnSend:hover{
  background : whitesmoke;
}

#tempCaptcha{
  font-size:1.1em;
  text-transform:none;
  display:inline;
  color: red;
}

#verify{
  margin-top: -2.5em;
  text-transform:none;
  font-size: .75em;
}

#answer{
  display:inline;
  max-width:1.5em;
}

p#quote{
  font-style: italic;
  text-align: center;
}


/*Modular styles*/
.icons img
{
  width:5em;
  margin-top:0.8333333333333334em;
  padding-top: 0.5em;
  padding-bottom: 0.5em;
}

.success{
  font-size:.95em;
  color:green;
  font-weight:bold;
  text-transform:none;
}

.error{
  font-size:1em;
  color:red;
  text-transform:uppercase;
}

.active{
  color:red;
}

/*
.g-recaptcha div { 
  margin-left: auto; margin-right: auto;
}
*/


/* Media query styles*/
  @media screen and (max-width: 40.625em) { 
    html {
        background-repeat:no-repeat;
        background: url('../img/chicago-night-mobile.jpg');
        text-align:center;
    }
    p{
      padding:.25em;
    }
    nav{
      justify-content:center;
      font-size:.5em;
      margin-left:-3em;
      margin-right:-3em;
    }
    nav a {
      font-size:1.6em;
    }
    h3{
      padding-bottom: .1em;
    }
    main{
      margin-left:-.6em;
      margin-right:-.6em;
    }
  }
  

